@@ -1,3 +1,15 @@
+2008-04-14  Øyvind Kolås  <pippin@o-hand.com>
+
+	* README: removed API documentation from list of items, since the
+	preliminary documentation is in place.
+	* clutter-box2d/clutter-box2d.cpp:
+	* clutter-box2d/clutter-box2d.h: added get|set_linear_velocity and
+	_angular_velocity methods.
+	* doc/reference/clutter-box2d-sections.txt:
+	* examples/actor-manipulator.c: (action_set_linear_velocity),
+	(actor_manipulator_press): added a menu item for setting the linear
+	velocity.
+
 2008-04-11  Øyvind Kolås  <pippin@o-hand.com>
 
 	* clutter-box2d/clutter-box2d.cpp:
